duniverse/menhirLib.20200211/test/static/bad/another-rule-is-expected.mly
%start<int> main
%token A

%%

main:
  A { 0 };

%type<int> main
